--- a/OneDo/View/NoteListControl.xaml
+++ b/OneDo/View/NoteListControl.xaml
@@ -10,6 +10,7 @@
                        xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
                        xmlns:v="using:OneDo.View"
                        xmlns:vm="using:OneDo.ViewModel"
+                       x:Name="Root"
                        mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -196,6 +197,9 @@
 
     <ListView x:Name="NoteListView"
               Grid.Row="1"
+              Background="{ThemeResource SystemControlBackgroundAltHighBrush}"
+              BorderBrush="{Binding BorderBrush, ElementName=Root}"
+              BorderThickness="{Binding BorderThickness, ElementName=Root}"
               ItemContainerStyle="{StaticResource NoteItemContainerStyle}"
               ItemTemplate="{StaticResource NoteItemTemplate}"
               ItemsSource="{x:Bind NotesViewSource.View, Mode=OneWay}"
