--- a/OneDo/View/SettingsView.xaml
+++ b/OneDo/View/SettingsView.xaml
@@ -3,12 +3,33 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:v="using:OneDo.View"
+             xmlns:v="using:OneDo.View" x:Name="Root"
              mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid x:Name="RootGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="24,12">
             <TextBlock Style="{ThemeResource HeaderTextBlockStyle}" Text="Settings" />
         </StackPanel>
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="WindowStates">
+                <VisualState x:Name="WideState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource MediumWidthBreakpoint}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="Root.HorizontalAlignment" Value="Right" />
+                        <Setter Target="Root.Width" Value="480" />
+                        <Setter Target="RootGrid.BorderThickness" Value="1,0,0,0" />
+                        <Setter Target="RootGrid.BorderBrush" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="NarrowState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
     </Grid>
 </v:ModalBase>
