--- a/OneDo/View/NoteEditor.xaml
+++ b/OneDo/View/NoteEditor.xaml
@@ -577,7 +577,7 @@
                                 Foreground="{x:Bind VM.DatePicker.Date, Mode=OneWay, Converter={StaticResource PickerForegroundConverter}}"
                                 Content="{x:Bind VM.DatePicker.DateText, Mode=OneWay}"
                                 Tag="&#xE787;"
-                                Tapped="DateButton_Tapped" />
+                                Tapped="OnDateButtonTapped" />
                         <Button Grid.Column="1"
                                 Style="{StaticResource ClearPickerButtonStyle}"
                                 Command="{x:Bind VM.DatePicker.ClearCommand, Mode=OneWay}"
@@ -681,21 +681,12 @@
                         <DataTemplate x:DataType="vm:DatePickerViewModel">
                             <Border HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
-                                    BorderBrush="{ThemeResource SystemControlBackgroundBaseLowBrush}"
+                                    BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
                                     BorderThickness="1">
                                 <v:DatePicker />
                             </Border>
                         </DataTemplate>
                     </v:ModalTemplateSelector.DatePickerTemplate>
-                    <v:ModalTemplateSelector.ConfirmationTemplate>
-                        <DataTemplate x:DataType="vm:ConfirmationViewModel">
-                            <Border VerticalAlignment="Bottom"
-                                    BorderBrush="{ThemeResource SystemControlBackgroundBaseLowBrush}"
-                                    BorderThickness="0,1,0,0">
-                                <v:ConfirmationView />
-                            </Border>
-                        </DataTemplate>
-                    </v:ModalTemplateSelector.ConfirmationTemplate>
                 </v:ModalTemplateSelector>
             </v:ModalContainer.TemplateSelector>
         </v:ModalContainer>
