--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -41,7 +41,7 @@
             <converters:ChangeTypeConverter x:Key="ChangeTypeConverter" />
             <converters:StringFormatConverter x:Key="StringFormatConverter" />
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
-            <converters:ConditionConverter x:Key="NullToVisibilityConverter" If="{x:Null}">
+            <converters:ConditionConverter x:Key="NotNullToVisibilityConverter" If="{x:Null}">
                 <converters:ConditionConverter.Then>
                     <Visibility>Collapsed</Visibility>
                 </converters:ConditionConverter.Then>
@@ -49,7 +49,7 @@
                     <Visibility>Visible</Visibility>
                 </converters:ConditionConverter.Else>
             </converters:ConditionConverter>
-            <converters:ConditionConverter x:Key="NullToBoolConverter" If="{x:Null}">
+            <converters:ConditionConverter x:Key="NotNullToBoolConverter" If="{x:Null}">
                 <converters:ConditionConverter.Then>
                     <x:Boolean>False</x:Boolean>
                 </converters:ConditionConverter.Then>
