--- a/OneDo/View/TimePicker.xaml
+++ b/OneDo/View/TimePicker.xaml
@@ -1,4 +1,4 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.Controls.TimePicker"
+﻿<v:ExtendedUserControl x:Class="OneDo.View.TimePicker"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -64,9 +64,17 @@
             </Setter>
         </Style>
 
+        <Style x:Key="TimeTextBlockStyle"
+               BasedOn="{StaticResource HeaderTextBlockStyle}"
+               TargetType="TextBlock">
+            <Setter Property="HorizontalAlignment" Value="Center" />
+        </Style>
+
     </v:ExtendedUserControl.Resources>
 
-    <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
+    <Grid Width="240"
+          Height="360"
+          Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
           BorderBrush="{ThemeResource SystemControlForegroundChromeHighBrush}"
           BorderThickness="1">
         <Grid.ColumnDefinitions>
@@ -74,60 +82,62 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Canvas x:Name="RootCanvas"
-                Grid.Row="0"
-                Grid.ColumnSpan="2"
-                Width="340"
-                Height="340"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Background="Transparent"
-                ManipulationCompleted="RootGrid_ManipulationCompleted"
-                ManipulationDelta="RootGrid_ManipulationDelta"
-                ManipulationMode="TranslateX,TranslateY"
-                ManipulationStarted="RootGrid_ManipulationStarted"
-                Tapped="RootGrid_Tapped">
+        <Grid Grid.Row="0"
+              Grid.ColumnSpan="2"
+              Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
+              BorderBrush="{ThemeResource SystemControlForegroundChromeHighBrush}"
+              BorderThickness="0,0,0,1">
+            <Grid Width="160"
+                  HorizontalAlignment="Stretch"
+                  VerticalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0"
+                           Style="{StaticResource TimeTextBlockStyle}"
+                           Foreground="{ThemeResource SystemControlForegroundAccentBrush}"
+                           Text="{x:Bind Hours, FallbackValue=06, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='\{0:00}'}" />
+                <TextBlock Grid.Column="1"
+                           Style="{StaticResource TimeTextBlockStyle}"
+                           Text=":" />
+                <TextBlock Grid.Column="2"
+                           Style="{StaticResource TimeTextBlockStyle}"
+                           Text="{x:Bind Minutes, FallbackValue=27, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='\{0:00}'}" />
+            </Grid>
+        </Grid>
 
-            <Ellipse Width="232"
-                     Height="232"
-                     Canvas.Top="54"
-                     Canvas.Left="54"
-                     Stroke="{ThemeResource SystemControlForegroundBaseLowBrush}"
-                     StrokeDashArray="4,4"
-                     StrokeThickness="1" />
+        <Slider Grid.Row="1"
+                Grid.Column="0"
+                Margin="20,16"
+                HorizontalAlignment="Right"
+                Maximum="23"
+                Minimum="0"
+                Orientation="Vertical"
+                Value="{x:Bind Hours, Mode=TwoWay}" />
+        <Slider Grid.Row="1"
+                Grid.Column="1"
+                Margin="20,16"
+                HorizontalAlignment="Left"
+                Maximum="59"
+                Minimum="0"
+                Orientation="Vertical"
+                Value="{x:Bind Minutes, Mode=TwoWay}" />
 
-            <Ellipse Width="124"
-                     Height="124"
-                     Canvas.Top="108"
-                     Canvas.Left="108"
-                     Stroke="{ThemeResource SystemControlForegroundBaseLowBrush}"
-                     StrokeDashArray="4,4"
-                     StrokeThickness="1" />
-
-            <Ellipse x:Name="MinuteIndicator"
-                     Width="48"
-                     Height="48"
-                     Fill="{ThemeResource SystemControlBackgroundAccentBrush}"
-                     Opacity="0" />
-            <Ellipse x:Name="HourIndicator"
-                     Width="48"
-                     Height="48"
-                     Fill="{ThemeResource SystemControlBackgroundAccentBrush}"
-                     Opacity="0" />
-        </Canvas>
-
-        <Button Grid.Row="1"
+        <Button Grid.Row="21"
                 Grid.Column="0"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,1,0"
                 Tapped="{x:Bind UpdateTime}">
             <FontIcon FontSize="16" Glyph="&#xE8FB;" />
         </Button>
-        <Button Grid.Row="1"
+        <Button Grid.Row="2"
                 Grid.Column="1"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,0,0"
